--- a/app/src/main/res/layout/popuplayout.xml
+++ b/app/src/main/res/layout/popuplayout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <LinearLayout
@@ -40,16 +40,18 @@
                     android:orientation="horizontal">
 
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/user_pic"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:src="@mipmap/user_filling"
-                        android:scaleX="0.8"
-                        android:scaleY="0.8">
+                        android:scaleX="0.7"
+                        android:scaleY="0.7"
+                        app:civ_border_width="1dp"
+                        app:civ_border_color="@color/light_gray">
 
-                </ImageView>
+                </de.hdodenhof.circleimageview.CircleImageView>
                 <TextView
                         android:id="@+id/user_name"
                         android:layout_width="0dp"
@@ -70,6 +72,7 @@
                     android:layout_height="match_parent"
                     />
             <ImageView
+                    android:id="@+id/popup_message"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
