--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -98,7 +98,7 @@
         </View>
 
 
-        <WebView
+        <com.github.lzyzsd.jsbridge.BridgeWebView
 
 
                 android:layout_weight="2"
