--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -24,7 +24,7 @@
                 android:layout_width="180dp"
                 android:layout_height="180dp"
                 android:layout_marginTop="30dp"
-                android:src="@drawable/ic_launcher_background"
+                android:src="@mipmap/upload_pic"
                 app:civ_border_width="3dp"
                 app:civ_border_color="@color/day"/>
 
