--- a/app/src/main/res/layout/me_edit.xml
+++ b/app/src/main/res/layout/me_edit.xml
@@ -102,6 +102,7 @@
                 android:inputType="text"
                 android:hint="请输入手机号"
                 android:paddingLeft="8dp"
+                android:enabled="false"
                 android:textColorHint="#000000"
                 />
     </LinearLayout>
