--- a/app/src/main/res/layout/popuplayout.xml
+++ b/app/src/main/res/layout/popuplayout.xml
@@ -58,7 +58,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="2"
                         android:paddingTop="25dp"
-                        android:text="用户名"
+                        android:text="未登录"
                         android:textSize="20sp"
                         android:textColor="@color/text_black">
 
@@ -263,13 +263,13 @@
 
             </LinearLayout>
             <LinearLayout
-                    android:id="@+id/popup_no_history"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                 <ImageView
+                        android:id="@+id/popup_no_history"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="2"
@@ -280,6 +280,7 @@
                 </ImageView>
 
                 <TextView
+                        android:id="@+id/popup_no_history_text"
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="1"
@@ -330,7 +331,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="0dp"
                         android:layout_weight="2"
-                        android:src="@mipmap/setting"
+                        android:src="@mipmap/file_add"
                         android:scaleX="0.6"
                         android:scaleY="0.6">
 
@@ -341,7 +342,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:textSize="13sp"
-                        android:text="设置"
+                        android:text="添加到书签"
                         android:textColor="@color/text_black">
 
                 </TextView>
